--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -2,7 +2,22 @@ FROM ubuntu:bionic
 # FROM arm64=arm64v8/ubuntu:bionic
 
 RUN apt-get update && \
-    apt-get install -y build-essential wget libncurses5-dev unzip bc curl python rsync ccache vim less cpio texinfo locales
+    apt-get install -y \
+        build-essential \
+        wget \
+        libncurses5-dev \
+        unzip \
+        bc \
+        curl \
+        python \
+        rsync \
+        ccache \
+        vim \
+        less \
+        cpio \
+        texinfo \
+        locales \
+        git
 
 RUN locale-gen en_US.UTF-8
 ENV LANG en_US.UTF-8
